--- a/website/style.css
+++ b/website/style.css
@@ -1,7 +1,7 @@
-*{
+/*{
     
     text-align: center;
     font-size: 50px;
     background-image: linear-gradient(to left, #774FC2, #E380B6, #E13A66);
-}
+}*/
 
